force-app/main/default/objects/b3o__Compliance_Profile__c/b3o__Compliance_Profile__c.object-meta.xml
<CustomObject>
    <label>Compliance Profile</label>
    <nameField>
        <displayFormat>COMP-PROF-{0}</displayFormat>
        <label>Compliance Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>