force-app/main/default/objects/b3o__Compliance_Profile__c/fields/b3o__Compliance_Rule__c.field-meta.xml
<CustomField>
    <fullName>b3o__Compliance_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Rule</label>
    <referenceTo>b3o__Compliance_Rule__c</referenceTo>
    <relationshipLabel>Compliance Profiles</relationshipLabel>
    <relationshipName>Compliance_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>