force-app/main/default/objects/b3o__Compliance_Profile__c/fields/b3o__Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>b3o__Last_Updated__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>