force-app/main/default/objects/b3o__Compliance_Profile__c/fields/b3o__Match_ID__c.field-meta.xml
<CustomField>
    <fullName>b3o__Match_ID__c</fullName>
    <formula>CASESAFEID( b3o__Compliance_Rule__c ) &amp; &quot;_&quot; &amp; CASESAFEID(b3o__Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Match ID</label>
    <type>Text</type>
</CustomField>