force-app/main/default/objects/b3o__Compliance_Profile__c/fields/b3o__Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>b3o__Percent_Complete__c</fullName>
    <formula>( b3o__Total_Score__c /  b3o__Compliance_Rule__r.b3o__Passing_Score__c )*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>