force-app/main/default/objects/b3o__Compliance_Profile__c/fields/b3o__Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__Status__c</fullName>
    <formula>if(b3o__Total_Score__c == 0, &apos;Not Started&apos;, if( b3o__Total_Score__c  &gt;= b3o__Compliance_Rule__r.b3o__Passing_Score__c, &apos;Complete&apos;, &apos;In Progress&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>