force-app/main/default/objects/b3o__Compliance_Profile__c/fields/b3o__Total_Score__c.field-meta.xml
<CustomField>
    <fullName>b3o__Total_Score__c</fullName>
    <inlineHelpText>Across all groups</inlineHelpText>
    <label>Total Score</label>
    <summarizedField>b3o__Compliance_Group__c.b3o__Score__c</summarizedField>
    <summaryForeignKey>b3o__Compliance_Group__c.b3o__Compliance_Profile__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>